# log

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 00-template-chooser.md  bug_report.md  config.yml  documentation.md  feature_request.md  performance_issue.md  question.md  security_vulnerability.md
.github/workflows/: ci.yaml  health.yaml  publish.yaml  quality.yaml  release.yaml  security.yaml  test.yaml
docs/: API.md  best-practices.md  integrations.md  migration.md  troubleshooting.md
effect_log/: __init__.py  logger.py  middleware.py  types.py  writers.py
examples/: basic_usage.py  http_integration.py  production_setup.py
tests/: __init__.py  test_logger.py  test_middleware.py  test_writers.py
